# pipeline_benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  append.cpp  append.hpp  args.hpp  build_and_run.sh  input.cpp  input.hpp  join.cpp  join.hpp  malloc_span.hpp  prepend.cpp  prepend.hpp  run.sh
bench_input_append/: copy.cpp  moved.cpp  ref.cpp  static.cpp
bench_input_join/: copy.cpp  moved.cpp  ref.cpp  static.cpp
bench_input_only/: copy.cpp  moved.cpp  ref.cpp  static.cpp  static_raw.cpp
bench_input_prepend/: copy.cpp  moved.cpp  ref.cpp  static.cpp
bench_pipeline/: copy.cpp  flex_vector.cpp  malloc.cpp  moved.cpp  ref.cpp  static.cpp
rust/: Cargo.toml
rust/src/: lib.rs
